--- a/index.html
+++ b/index.html
@@ -204,14 +204,9 @@
     <section id="home" class="min-h-screen flex items-center pt-20 px-6 relative overflow-hidden">
         <div class="max-w-7xl mx-auto w-full grid md:grid-cols-2 gap-12 items-center relative z-10">
             <div class="order-2 md:order-1 space-y-8 animate-slide-up">
-                <div class="inline-flex items-center gap-2 px-4 py-1.5 rounded-full glass-card text-primary text-xs font-bold tracking-widest uppercase">
-                    <span class="w-2 h-2 rounded-full bg-primary animate-pulse"></span>
-                    Available for hire
-                </div>
-                
                 <h1 class="text-5xl md:text-8xl font-bold tracking-tight leading-tight drop-shadow-sm">
                     Crafting Digital <br>
-                    <span class="text-transparent bg-clip-text bg-gradient-to-r from-primary to-orange-600">Masterpieces</span>
+                    <span class="text-transparent bg-clip-text bg-gradient-to-r from-primary to-orange-600">Designs</span>
                 </h1>
                 
                 <p class="text-xl text-gray-600 dark:text-gray-300 font-light h-8">
@@ -497,7 +492,7 @@
 
     <!-- Simple Footer -->
     <footer class="py-8 text-center text-xs text-gray-500 border-t border-gray-200 dark:border-gray-800 glass">
-        <p>&copy; <script>document.write(new Date().getFullYear())</script> Ritivik Kumar. Crafted with intent.</p>
+        <p>&copy; <script>document.write(new Date().getFullYear())</script> Ritivik Kumar.All right reserved.</p>
     </footer>
 
     <script>
@@ -655,4 +650,5 @@
         });
     </script>
 </body>
+
 </html>
