--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
                 </div>
                 <div class="flex flex-col">
                     <span class="font-bold text-lg tracking-tight leading-none uppercase">Ritivik</span>
-                    <span class="text-[10px] tracking-[0.2em] text-gray-500 dark:text-gray-400 group-hover:text-primary transition-colors">Designer</span>
+                    <span class="text-[10px] tracking-[0.2em] text-gray-500 dark:text-gray-400 group-hover:text-primary transition-colors">GRAPHICS DESIGNER | WEB DESIGNER</span>
                 </div>
             </a>
 
@@ -652,3 +652,4 @@
 </body>
 
 </html>
+
