--- a/index.html
+++ b/index.html
@@ -403,7 +403,7 @@
         </div>
     </section>
 
-    <!-- Featured Clients -->
+    <!-- Featured Clients 
     <section class="py-12 bg-white dark:bg-neutral-900 border-y border-neutral-200 dark:border-neutral-800">
         <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
             <div class="text-center mb-8">
@@ -427,6 +427,7 @@
             </div>
         </div>
     </section>
+    -->
 
     <!-- Services -->
     <section id="services" class="py-24 px-4 sm:px-6 lg:px-8">
@@ -1169,3 +1170,4 @@
     </script>
 </body>
 </html>
+
